--- a/automata.cabal
+++ b/automata.cabal
@@ -35,6 +35,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , hspec
   default-language: Haskell2010
 
 executable automata-exe
@@ -48,12 +49,14 @@ executable automata-exe
       automata
     , base >=4.7 && <5
     , containers
+    , hspec
   default-language: Haskell2010
 
 test-suite automata-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ExampleSpec
       Paths_automata
   hs-source-dirs:
       test
@@ -62,4 +65,5 @@ test-suite automata-test
       automata
     , base >=4.7 && <5
     , containers
+    , hspec
   default-language: Haskell2010
