--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - containers
+- hspec
 
 ghc-options:
 - -Wall
@@ -61,3 +62,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - automata
+    - hspec
