--- a/stack.yaml
+++ b/stack.yaml
@@ -36,9 +36,7 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 # extra-deps:
-# - acme-missiles-0.3
-# - git: https://github.com/commercialhaskell/stack.git
-#   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
+# - hspec
 #
 # extra-deps: []
 
