Added test for minimzation

--- a/automata.cabal
+++ b/automata.cabal
@@ -43,6 +43,7 @@ test-suite automata-test
   main-is: Spec.hs
   other-modules:
       ExampleSpec
+      MinimizeSpec
       Paths_automata
   hs-source-dirs:
       test
