Implemented operators on NFAs

--- a/automata.cabal
+++ b/automata.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Automata.NFA
       Automata.DFA
+      Automata.Operators
   other-modules:
       Paths_automata
   hs-source-dirs:
