Added root module with simple operators

--- a/automata.cabal
+++ b/automata.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Automata
       Automata.NFA
       Automata.DFA
       Automata.Operators
