--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ ghc-options:
 library:
   source-dirs: src
   exposed-modules:
+    - Automata
     - Automata.NFA
     - Automata.DFA
     - Automata.Operators
