--- a/automata.cabal
+++ b/automata.cabal
@@ -25,10 +25,10 @@ source-repository head
 
 library
   exposed-modules:
-      Automata
-      Automata.NFA
-      Automata.DFA
-      Automata.Operators
+      Regular
+      Regular.NFA
+      Regular.DFA
+      Regular.Operators
       Tokenizer
       Tokenizer.DFA
   other-modules:
@@ -47,8 +47,6 @@ test-suite automata-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      ExampleSpec
-      MinimizeSpec
       Paths_automata
   hs-source-dirs:
       test
