--- a/package.yaml
+++ b/package.yaml
@@ -33,8 +33,9 @@ library:
   exposed-modules:
     - Regular
     - Regular.NFA
+    - Regular.NFA.Operators
     - Regular.DFA
-    - Regular.Operators
+    - Regular.Minimal
     - Tokenizer
     - Tokenizer.DFA
     - ContextFree.PDA
