--- a/automata.cabal
+++ b/automata.cabal
@@ -34,6 +34,7 @@ library
       Tokenizer.DFA
       ContextFree.PDA
       Graph
+      Regex
   other-modules:
       Paths_automata
   hs-source-dirs:
