--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,7 @@ library:
     - Tokenizer.DFA
     - ContextFree.PDA
     - Graph
+    - Regex
 tests:
   automata-test:
     main:                Spec.hs
